인증메일 인증 중복처리 수정

--- a/packages/backend/welcome2.html
+++ b/packages/backend/welcome2.html
@@ -7,7 +7,7 @@
     <title>냥터레스트</title>
 </head>
 <body>
-    냥터레스트 회원가입을 축하합니다.
+    이미 인증된 회원입니다.
     3초 후 냥터레스트 홈페이지로 자동 이동됩니다.
     <script>
         
