비밀번호찾기 프로세스 축소

--- a/packages/backend/password.html
+++ b/packages/backend/password.html
@@ -20,7 +20,7 @@
             </label>
         </div>
         <div>
-            <button type="button" class="submit-password" onclick="passwordModify()"></button>
+            <button type="button" class="submit-password" onclick="passwordModify()">비밀번호 변경</button>
         </div>
     <script>
         const getUrlParams = ()=>{
@@ -31,23 +31,43 @@
 
         const passwordModify = (e) => {
             const params = getUrlParams();
+            // eslint-disable-next-line
+            const PASSWORD_FORMAT = /^(?=[a-zA-Z0-9!@$%^*])(?!.*[^a-zA-Z0-9!@$%^*]).{6,15}$/
             const passwordInfo = {
                 password: document.querySelector('#password').value,
                 passwordCheck: document.querySelector('#passwordCheck').value,
-                modifyToken: params.token
+                modifyToken: params.token,
             }
 
-            const jsonPasswordInfo = JSON.stringify(passwordInfo);
+            const validate = PASSWORD_FORMAT.test(passwordInfo.password);
+            const passwordMatch = passwordInfo.password===passwordInfo.passwordCheck;
 
-            console.log(jsonPasswordInfo)
-            fetch('/account/password/modify',{
+            const jsonPasswordInfo = JSON.stringify(passwordInfo);
+            console.log("비밀번호변경정보",jsonPasswordInfo)
+
+            if(validate && passwordMatch) {
+                fetch('/account/password/modify',{
                 headers: {
                 'Accept': 'application/json',
                 'Content-Type': 'application/json'
                 },
                 method: "POST",
                 body: jsonPasswordInfo
-            })
+                }).then(res=>res.json())
+                .then(json=>{
+                    if(json.passwordUpdate){
+                        alert('비밀번호가 변경되었습니다.');
+                    }else {
+                        alert('비밀번호 변경에 실패했습니다.');
+                    }
+                })
+            }else {
+               if(!validate){
+                    alert('비밀번호는 6자이상 15자 이하로 입력해주세요');
+               }else {
+                    alert('입력된 비밀번호와 비밀번호확인란이 일치하지 않습니다. 다시한번 확인해주세요');
+               }
+            }
         }
     </script>
 </body>
