비밀번호 입력시 #문자 허용

--- a/packages/backend/password.html
+++ b/packages/backend/password.html
@@ -32,7 +32,7 @@
         const passwordModify = (e) => {
             const params = getUrlParams();
             // eslint-disable-next-line
-            const PASSWORD_FORMAT = /^(?=[a-zA-Z0-9!@$%^*])(?!.*[^a-zA-Z0-9!@$%^*]).{6,15}$/
+            const PASSWORD_FORMAT = /^(?=[a-zA-Z0-9!@$%^*#])(?!.*[^a-zA-Z0-9!@$%^*#]).{6,15}$/
             const passwordInfo = {
                 password: document.querySelector('#password').value,
                 passwordCheck: document.querySelector('#passwordCheck').value,
